Fixing some block spacing

--- a/docroot/themes/custom/pinballoutreach/css/style.css
+++ b/docroot/themes/custom/pinballoutreach/css/style.css
@@ -420,3 +420,8 @@ h2 a {
 img.align-left{
   padding: 0 15px 0 0;
 }
+
+.content-sidebar .view-content,
+.content-sidebar .text-formatted {
+  padding: 20px 20px 20px 20px;
+}
